--- a/style.css
+++ b/style.css
@@ -3,32 +3,119 @@
     box-sizing: inherit;
 }
 
-html, body, ul, ol {
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark {
+    border: 0;
+    font: inherit;
+    font-size: 100%;
     margin: 0;
     padding: 0;
+    vertical-align: baseline;
 }
 
-html>body {
-    font-family: 'Roboto','Helvetica','Arial',sans-serif!important;
-    background-color: #eeeeee;
+html,
+body {
+    background-color: #eae8e7;
+    font-family: "Lato";
+    font-weight: 300;
+    font-size: 16px;
+    color: #767270;
     -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    text-rendering: optimizeLegibility;
-    -webkit-text-rendering: optimizeLegibility;
+    -webkit-overflow-scrolling: touch;
+    margin-top: 70px;
+  }
+  
+
+.clear {
+    clear: both;
 }
-h1{
+
+p {
+    font-size: 1em;
+    line-height: 1.4em;
+    margin-bottom: 10px;
+    color: #444;
+}
+
+#cv {
+    width: 90%;
+    max-width: 1024px;
+    background: #f3f3f3;
+    margin: 30px auto;
+}
+
+h3{
    font-weight: 400;
    color: #999;
    font-size: 13px;
    margin: 48px 0 12px 22px;
 }
 div.panel{
-    max-width: 65%;
+    max-width: 55%;
     margin: auto;
     margin-top: calc(5% - 0px);
 }
 details{
-    background:#fff;
+    /* background:#fff; */
     font-size:16px;
     border-bottom:1px solid #e0e0e0;
       box-shadow:0 0 2px rgba(0,0,0,0.12),0 2px 4px rgba(0,0,0,0.24);
@@ -117,3 +204,89 @@ summary::after {
  time{ color: #757575; opacity: .75; }  
 .list-unstyled { margin-top:15px; padding-left: 0; list-style: none;}
 .list-unstyled li{ margin-bottom:6px; }
+
+
+
+.cv {
+    width: 90%;
+    max-width: 1024px;
+    background: #f3f3f3;
+    margin: 30px auto;
+}
+
+.mainDetails {
+    padding: 25px 35px;
+    border-bottom: 2px solid #cf8a05;
+    background: #ededed;
+}
+
+#name h2 {
+    font-size: 2.5em;
+    font-weight: 700;
+    font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
+    margin-bottom: -6px;
+}
+
+#headshot {
+    width: 12.5%;
+    float: left;
+    margin-right: 30px;
+}
+
+#headshot img {
+    width: 100%;
+    height: auto;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+
+#name {
+    float: left;
+}
+
+#contactDetails {
+    float: right;
+}
+
+#contactDetails ul {
+    list-style-type: none;
+    font-size: 0.9em;
+    margin-top: 2px;
+}
+
+#contactDetails ul li {
+    margin-bottom: 3px;
+    color: #444;
+}
+
+#contactDetails ul li a,
+a[href^=tel] {
+    color: #444;
+    text-decoration: none;
+    -webkit-transition: all .3s ease-in;
+    -moz-transition: all .3s ease-in;
+    -o-transition: all .3s ease-in;
+    -ms-transition: all .3s ease-in;
+    transition: all .3s ease-in;
+}
+
+#contactDetails ul li a:hover {
+    color: #cf8a05;
+}
+
+
+
+
+.content span {
+    color: #5da4d9;
+    margin-top: 0px;
+    font-size: 10pt;
+    line-height: 15pt;
+}
+
+.content h3 {
+    margin: 0px;
+    font-size: 12pt;
+    line-height: 20pt;
+  }
